.. -*- coding: UTF-8 -*-

2009-10-06 (1.2.6)
    - Due to some mix up up the I got the bugfix for the 'timeout' parameter
      to ThreadPool.putRequest exactly the wrong way round (or I "fixed" it
      twice). It now defaults to None as its should, so putRequest blocks by
      default, if the requests queue is full. Thanks for Guillaume Taglang for
      reporting the issue.
    - rename NEWS.txt to CHANGELOG.txt (this file).

2008-11-19
    - Update reference to "Python In A Nutshell" to second edition (suggested
      by Alex Martelli).
    - Fixed typo in WorkerThread.run() (thanks to Nicholas Bollweg, Aaron
      Levinson, Rogério Schneider, Grégory Starck for reporting).
    - Fixed missing first argument in call to Queue.get() in WorkerThread.run()
      (thanks to Aaron Levinson for report).
    - added new argument 'do_join' to ThreadPool.dismissWorkers(). When True,
      the method will perform Thread.join() on each thread after dismissing it.
    - Added joinAllDismissedWorkers method to ThreadPool to join dismissed
      threads at a later time (thanks to Aaron Levinson for patch for these two
      changes).

2008-05-04
    - 'timeout' parameter of ThreadPool.putRequest now correctly defaults to 0
      instead of None (thanks to Mads Sülau Jørgensen for bug report).
    - Added default exception handler callback (thanks to Moshe Cohen for the
      patch).
    - Fixed locking issue that prevented worker threads from being dismissed
      when no work requests are in the requests queue (thanks to Guillaume
      Pratte for the bug report).
    - Add option for results queue size to ThreadPool (thanks to Krzysztof
      Jakubczyk for the idea).
    - Changed name of reuquestQueue and resultsQueue attributes in WorkerThread
      and ThreadPool to _requests_queue and _results_queue to be more consistent
      and compliant with PEP 8 and properly indicate private nature.
    - Moved repository to Subversion.

2008-05-03